V1 - getAgreement REST call